add javascript function for admin panel

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <input type="text" name="catname"><br />
            
         <label for="imgurl">ImgUrl:</label>
-          <input type="text" name="imgurl"><br />
+          <input type="url" name="imgurl"><br />
            
         <label for="clicks">#Clicks:</label>      
           <input type="text" name="clicks"><br /> 
